--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 <body>
 	<header>
 		<header>
-		<div id="cuotas"> 3 CUOTAS SIN INTERÉS EN TODAS TUS COMPRAS! 6 Y 12 CUOTAS CON INTERÉS. AMEX/VISA Y MASTERCARD Y CABAL DE TODOS LOS BANCOS.
-		</div> 
-		<div id="barra">
-		<a class="fav">FAVORITOS</a> <a class="ingreso">INGRESAR O CREAR UNA CUENTA</a></div>
-		<div id="logo"> 
+			<div id="cuotas"> 3 CUOTAS SIN INTERÉS EN TODAS TUS COMPRAS! 6 Y 12 CUOTAS CON INTERÉS. AMEX/VISA Y MASTERCARD Y CABAL DE TODOS LOS BANCOS.
+			</div> 
+			<div id="barra">
+				<a class="fav">FAVORITOS</a> <a class="ingreso">INGRESAR O CREAR UNA CUENTA</a>
+			</div>
+			<div id="logo"> 
 			<img src="imagenes/logo.svg" alt="complot"/>
-		</div>
-	  	<div class="botonera-head">
+			</div>
+	  		<div class="botonera-head">
 			<ul class="navegacion"><strong>AW23</strong> <a>SHOP</a> <a>ESSENCIALS</a> <a>OUTLET</a></ul>
 		  	<a id="buscar"><img src="imagenes/buscar.png" width="145" height="20" alt="lupa"/> </a>
-		</div>
-	</header>
+			</div>
+		</header>
 	</body>
 </html>
