--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <meta charset="utf-8">
 <title>index</title>
 <link href="../grupo11-complot/complot-estilos.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="grupo11-complot/fancybox/css/jquery.fancybox.min.css">
+<script src="grupo11-complot/fancybox/js/jquery.fancybox.min.js"></script>
 </head>
-
 <body>
 	<header>
 		<div id="cuotas"> 3 CUOTAS SIN INTERÉS EN TODAS TUS COMPRAS! 6 Y 12 CUOTAS CON INTERÉS. AMEX/VISA Y MASTERCARD Y CABAL DE TODOS LOS BANCOS.
@@ -20,5 +21,60 @@
 		<a id="buscar"><img src="imagenes/buscar.png" width="145" height="20" alt="lupa"/> </a>
 		</div>
 	</header>
+	<main>
+		<div class="gallery">
+			<a href="banner01" data-fancybox="gallery">
+			<img src="imagenes/carrusel/banner-home-01.jpg" width="2440" height="1167" alt="banner01"/></a>
+			<a href="banner02" data-fancybox="gallery" >
+			<img src="imagenes/carrusel/banner-home-02.jpg" width="2440" height="1167" alt="banner02"/></a>
+			<a href="banner03" data-fancybox="gallery" >
+			<img src="imagenes/carrusel/banner-home-03.jpg" width="2440" height="1167" alt="banner03"/></a>
+			<a href="banner04" data-fancybox="gallery" >
+			<img src="imagenes/carrusel/banner-home-04.jpg" width="2440" height="1167" alt="banner04"/></a>
+			<a href="banner05" data-fancybox="gallery" >
+			<img src="imagenes/carrusel/banner-home-05.jpg" width="2440" height="1167" alt="banner05"/></a>
+			<a href="banner06" data-fancybox="gallery" >
+			<img src="imagenes/carrusel/banner-home-06.jpg" width="2440" height="1167" alt="banner06"/></a>
+			<a href="banner07" data-fancybox="gallery" >
+			<img src="imagenes/carrusel/banner-home-07.jpg" width="2440" height="1167" alt="banner07"/></a>
+			<a href="banner08" data-fancybox="gallery" >
+			<img src="imagenes/carrusel/banner-home-08.jpg" width="2440" height="1167" alt="banner08"/></a>
+		</div>
+		<section class="botonera-img">
+			<div class="botonera-imagenes-01">
+				<a class="boton" href="jeans" data-fancybox="botonera-imagenes">
+				<img src="imagenes/botonera-imagenes/boton-jeans.jpg" alt="Jeans"/></a>
+				<a class="boton" href="lookbook" data-fancybox="botonera-imagenes">
+				<img src="imagenes/botonera-imagenes/boton-lookbook.jpg" alt="Lookbook"/></a>
+				<a class="boton" href="accesorios" data-fancybox="botonera-imagenes">
+				<img src="imagenes/botonera-imagenes/boton-accesorios.jpg" alt="Accesorios"/></a>
+			</div>
+			<div class="botonera-imagenes-02">
+				<a class="boton" href="sport" data-fancybox="botonera-imagenes-02">
+				<img src="imagenes/botonera-imagenes/boton-sport.jpg" alt="Sport"/></a>
+				<a class="boton" href="abrigos" data-fancybox="botonera-imagenes-02">
+				<img src="imagenes/botonera-imagenes/boton-abrigos.jpg" alt="Abrigos"/></a>
+				<a class="boton" href="standart" data-fancybox="botonera-imagenes-02">
+				<img src="imagenes/botonera-imagenes/boton-standart-series.jpg" alt="Standart"/></a>
+			</div>
+			<section class="hashtag">#COMPLOTROCK</section>
+			<div class="botonera-redes">
+		    	<a class="boton"><img src="imagenes/botonera-redes/boton-fb.jpg" width="420" height="420" alt="Facebook"/></a>
+				<a class="boton"><img src="imagenes/botonera-redes/boton-ig.jpg" width="420" height="420" alt="Instagram"/></a>
+				<a class="boton"><img src="imagenes/botonera-redes/boton-tiktok.jpg" width="420" height="420" alt="Tiktok"/></a>
+				<a class="boton"><img src="imagenes/botonera-redes/boton-youtube.jpg" width="420" height="420" alt="Youtube"/></a>
+			</div>
+		</section>
+	</main>
+<script>
+  $(document).ready(function() {
+    $('[data-fancybox="images"]').fancybox({
+      loop: true,
+      thumbs: {
+        autoStart: true
+      }
+    });
+  });
+</script>
 </body>
 </html>
