avance en footer

--- a/index.html
+++ b/index.html
@@ -66,6 +66,31 @@
 			</div>
 		</section>
 	</main>
+	<footer>
+		<div>
+			<div class="suscripcion"> SUSCRIBETE AL NEWSLETTER</div>
+			<div class="mail"> TU E-MAIL</div>
+			<div class="suscribirse-boton"><img src="imagenes/suscribirse.png" width="125" height="40" alt=""/></div>
+		</div>
+		<div class="contacto">CONTACTO</div>
+	  		<div class="datos">
+				<h3>0810 220 7625</h3>
+				<h3>AYUDA@COMPLOT.COM.AR</h3>
+		  		<h3>NUESTROS LOCALES </h3>
+			</div>
+
+		<div class="lista"> 	
+			<div>AYUDA</div>
+			<h3>CÓMO COMPRAR</h3>
+			<h3>ENVÍOS</h3>
+			<h3>FORMAS DE PAGO</h3>
+			<h3>CAMBIOS Y DEVOLUCIONES</h3>
+			<h3>PREGUNTAS FRECUENTES</h3>
+			<h3>SEGUIMIENTO DE PEDIDO</h3>
+			<h3>TÉRMINOS Y CONDICIONES</h3>
+			<h3>POLÍTICAS DE PRIVACIDAD</h3>
+		</div>
+	</footer>
 <script>
   $(document).ready(function() {
     $('[data-fancybox="images"]').fancybox({
