--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>index</title>
 <link href="../grupo11-complot/complot-estilos.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="grupo11-complot/fancybox/css/jquery.fancybox.min.css">
@@ -9,8 +10,11 @@
 </head>
 <body>
 	<header>
-		<div id="cuotas"> 3 CUOTAS SIN INTERÉS EN TODAS TUS COMPRAS! 6 Y 12 CUOTAS CON INTERÉS. AMEX/VISA Y MASTERCARD Y CABAL DE TODOS LOS BANCOS.
-		</div> 
+		<div id="cuotas"> 
+		  <p> 3 CUOTAS SIN INTERÉS EN TODAS TUS COMPRAS! 6 Y 12 CUOTAS CON INTERÉS. AMEX/VISA Y MASTERCARD Y CABAL DE TODOS LOS BANCOS. </p>
+		  <p><br>
+	      </p>
+        </div> 
 		<div id="barra">
 		<a class="fav">FAVORITOS</a> <a class="ingreso">INGRESAR O CREAR UNA CUENTA</a></div>
 		<div id="logo"> 
@@ -78,18 +82,28 @@
 				<h3>AYUDA@COMPLOT.COM.AR</h3>
 		  		<h3>NUESTROS LOCALES </h3>
 			</div>
-
-		<div class="lista"> 	
-			<div>AYUDA</div>
-			<h3>CÓMO COMPRAR</h3>
-			<h3>ENVÍOS</h3>
-			<h3>FORMAS DE PAGO</h3>
-			<h3>CAMBIOS Y DEVOLUCIONES</h3>
-			<h3>PREGUNTAS FRECUENTES</h3>
-			<h3>SEGUIMIENTO DE PEDIDO</h3>
-			<h3>TÉRMINOS Y CONDICIONES</h3>
-			<h3>POLÍTICAS DE PRIVACIDAD</h3>
-		</div>
+<!-- esta parte queda arreglarla, se me complico organizar las 3 columnas y el espacio entre elementos-->
+				<div class="listas-footer">
+					<ul class="lista"> 	
+						<p>TALLES Y CUIDADOS</p>
+						<li>TABLA DE TALLES Y CUIDADOS</li>
+					</ul>
+					<ul class="lista"> 	
+					<p>AYUDA</p>
+					<li>CÓMO COMPRAR</li>
+					<li>ENVÍOS</li>
+					<li>FORMAS DE PAGO</li>
+					<li>CAMBIOS Y DEVOLUCIONES</li>
+					<li>PREGUNTAS FRECUENTES</li>
+					<li>SEGUIMIENTO DE PEDIDO</li>
+					<li>TÉRMINOS Y CONDICIONES</li>
+					<li>POLÍTICAS DE PRIVACIDAD</li>
+					</ul>
+					<ul class=lista><p>SOBRE COMPLOT</p>
+					<li>TRABAJA CON NOSOTROS</li>
+					<li>NUESTROS LOCALES</li>
+					<li>CONTACTO</li> </ul>
+				</div>
 	</footer>
 <script>
   $(document).ready(function() {
