--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>index</title>
+	
+<!-- Esta parte es lo que estaba antes, lo borre para ver si se linkea bien el css 
 <link href="../grupo11-complot/complot-estilos.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="grupo11-complot/fancybox/css/jquery.fancybox.min.css">
+<link rel="stylesheet" href="grupo11-complot/fancybox/css/jquery.fancybox.min.css"> 
+en linea 13 vuelvo a linkear -->
+	
+<link href="complot-estilos.css" rel="stylesheet" type="text/css">
+	
 <script src="grupo11-complot/fancybox/js/jquery.fancybox.min.js"></script>
 </head>
 <body>
