--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 <!-- Esta parte es lo que estaba antes, lo borre para ver si se linkea bien el css 
 <link href="../grupo11-complot/complot-estilos.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="grupo11-complot/fancybox/css/jquery.fancybox.min.css"> 
-en linea 13 vuelvo a linkear -->
-	
-<link href="complot-estilos.css" rel="stylesheet" type="text/css">
-	
 <script src="grupo11-complot/fancybox/js/jquery.fancybox.min.js"></script>
+en linea 13 vuelvo a linkear -->
+<link href="complot-estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<header>
@@ -58,30 +56,20 @@ en linea 13 vuelvo a linkear -->
 			<a href="banner08" data-fancybox="gallery" >
 			<img src="imagenes/carrusel/banner-home-08.jpg" width="2440" height="1167" alt="banner08"/></a>
 		</div>
-		<!-- falta hacer responsive esta botonera de imagenes -->
-		<section class="botonera-img">
-			<div class="botonera-imagenes-01">
-				<a class="boton" href="jeans" data-fancybox="botonera-imagenes">
-				<img src="imagenes/botonera-imagenes/boton-jeans.jpg" alt="Jeans"/></a>
-				<a class="boton" href="lookbook" data-fancybox="botonera-imagenes">
-				<img src="imagenes/botonera-imagenes/boton-lookbook.jpg" alt="Lookbook"/></a>
-				<a class="boton" href="accesorios" data-fancybox="botonera-imagenes">
-				<img src="imagenes/botonera-imagenes/boton-accesorios.jpg" alt="Accesorios"/></a>
-			</div>
-			<div class="botonera-imagenes-02">
-				<a class="boton" href="sport" data-fancybox="botonera-imagenes-02">
-				<img src="imagenes/botonera-imagenes/boton-sport.jpg" alt="Sport"/></a>
-				<a class="boton" href="abrigos" data-fancybox="botonera-imagenes-02">
-				<img src="imagenes/botonera-imagenes/boton-abrigos.jpg" alt="Abrigos"/></a>
-				<a class="boton" href="standart" data-fancybox="botonera-imagenes-02">
-				<img src="imagenes/botonera-imagenes/boton-standart-series.jpg" alt="Standart"/></a>
-			</div>
+			<section class="grid-container">
+				<img src="imagenes/botonera-imagenes/boton-jeans.jpg" alt="Jeans"/>
+				<img src="imagenes/botonera-imagenes/boton-lookbook.jpg" alt="Lookbook"/>
+				<img src="imagenes/botonera-imagenes/boton-accesorios.jpg" alt="Accesorios"/>
+				<img src="imagenes/botonera-imagenes/boton-sport.jpg" alt="Sport"/>
+				<img src="imagenes/botonera-imagenes/boton-abrigos.jpg" alt="Abrigos"/>
+				<img src="imagenes/botonera-imagenes/boton-standart-series.jpg" alt="Standart"/>
+			</section>
 			<section class="hashtag">#COMPLOTROCK</section>
 			<div class="botonera-redes">
-		    	<a class="boton"><img src="imagenes/botonera-redes/boton-fb.jpg" width="420" height="420" alt="Facebook"/></a>
-				<a class="boton"><img src="imagenes/botonera-redes/boton-ig.jpg" width="420" height="420" alt="Instagram"/></a>
-				<a class="boton"><img src="imagenes/botonera-redes/boton-tiktok.jpg" width="420" height="420" alt="Tiktok"/></a>
-				<a class="boton"><img src="imagenes/botonera-redes/boton-youtube.jpg" width="420" height="420" alt="Youtube"/></a>
+		    	<img src="imagenes/botonera-redes/boton-fb.jpg" width="250" height="250" alt="Facebook"/>
+				<img src="imagenes/botonera-redes/boton-ig.jpg" width="250" height="250" alt="Instagram"/>
+				<img src="imagenes/botonera-redes/boton-tiktok.jpg" width="250" height="250" alt="Tiktok"/>
+				<img src="imagenes/botonera-redes/boton-youtube.jpg" width="250" height="250" alt="Youtube"/>
 			</div>
 		</section>
 	</main>
