ultimos ajustes en footer

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@ en linea 13 vuelvo a linkear -->
 		</section>
 	</main>
 	<footer>
-		<div>
+		<div class="newsletter">
 			<div class="suscripcion"> SUSCRIBETE AL NEWSLETTER</div>
 			<div class="mail"> TU E-MAIL</div>
-			<div class="suscribirse-boton"><img src="imagenes/suscribirse.png" width="125" height="40" alt=""/></div>
+		<img src="imagenes/suscribirse.png" width="125" height="40" alt=""/>
 		</div>
 			<div class="contacto"> <p class="titulos-listas">CONTACTO </p>
 	  			<ul class="datos">
