--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>index</title>
-	
-<!-- Esta parte es lo que estaba antes, lo borre para ver si se linkea bien el css 
-<link href="../grupo11-complot/complot-estilos.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="grupo11-complot/fancybox/css/jquery.fancybox.min.css"> 
-<script src="grupo11-complot/fancybox/js/jquery.fancybox.min.js"></script>
-en linea 13 vuelvo a linkear -->
 <link href="complot-estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -26,8 +20,9 @@ en linea 13 vuelvo a linkear -->
 				<img src="imagenes/lupa.png" width="30" height="28" alt="lupa"/>
 			</div>
 		</div>
-	  <div id="barra">
-		<a class="fav">FAVORITOS</a> <a class="ingreso">INGRESAR O CREAR UNA CUENTA</a></div>
+	 	<div id="barra">
+		<a class="fav">FAVORITOS</a> <a class="ingreso">INGRESAR O CREAR UNA CUENTA</a>
+		</div>
 		<div id="logo"> 
 			<img src="imagenes/logo.svg" alt="complot"/>
 		</div>
@@ -71,13 +66,12 @@ en linea 13 vuelvo a linkear -->
 				<img src="imagenes/botonera-redes/boton-tiktok.jpg" width="250" height="250" alt="Tiktok"/>
 				<img src="imagenes/botonera-redes/boton-youtube.jpg" width="250" height="250" alt="Youtube"/>
 			</div>
-		</section>
 	</main>
 	<footer>
 		<div class="newsletter">
-			<div class="suscripcion"> SUSCRIBETE AL NEWSLETTER</div>
-			<div class="mail"> TU E-MAIL</div>
-		<img src="imagenes/suscribirse.png" width="125" height="40" alt=""/>
+			<p class="suscripcion"> SUSCRIBETE AL NEWSLETTER</p>
+			<p class="mail"> TU E-MAIL</p>
+			<img src="imagenes/suscribirse.png" width="125" height="40" alt=""/>
 		</div>
 			<div class="contacto"> <p class="titulos-listas">CONTACTO </p>
 	  			<ul class="datos">
