TP FINAL: Implementación de formulario para motor de búsqueda en Header
Implementación de etiqueta <nav> en Header
Link de logos a Index para mejorar la navegación
Botonera de imágenes linkeadas correctamente a redes sociales de la marca
 Corrección en uso de etiquetas <h>,<p>
 Corrección de etiquetas <div> y <section>
Incorporación de video en Index
Implementación de formulario para suscripción en Footer
 Incorporación de un nuevo HTML con formulario para devoluciones de producto
 Incorporación de HTML "coming-soon" para direccionar hipervínculos de Header
Implementación de pseudoclases con animaciones en hipervínculos, botones e imágenes
Animaciones en HTML formulario y coming soon

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
+<meta charset="utf-8">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>index</title>
+	<title>coming-soon</title>
 	<link href="complot-estilos.css" rel="stylesheet" type="text/css">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css" rel="stylesheet">
-	<link rel="icon" type="imagenes/x-icon" href="/imagenes/favicon.ico">
 </head>
 <body>
 	<header>
@@ -46,32 +45,10 @@
 		</div>
 	</header>
 	<main>
-		<div class="gallery">
-			<a data-fancybox="gallery" href="imagenes/carrusel/banner-home-01.jpg"><img src="imagenes/carrusel/banner-home-01.jpg" width="2440" height="1167" alt="banner01"/></a>
-			<a data-fancybox="gallery" href="imagenes/carrusel/banner-home-02.jpg"></a>
-			<a data-fancybox="gallery" href="imagenes/carrusel/banner-home-03.jpg"></a>
-			<a data-fancybox="gallery" href="imagenes/carrusel/banner-home-04.jpg"></a>
-			<a data-fancybox="gallery" href="imagenes/carrusel/banner-home-05.jpg"></a>
-			<a data-fancybox="gallery" href="imagenes/carrusel/banner-home-06.jpg"></a>
-			<a data-fancybox="gallery" href="imagenes/carrusel/banner-home-07.jpg"></a>
-			<a data-fancybox="gallery" href="imagenes/carrusel/banner-home-08.jpg"></a>
-		</div>
-		<section class="grid-container">
-			<img src="imagenes/botonera-imagenes/boton-jeans.jpg" alt="Jeans"/>
-			<img src="imagenes/botonera-imagenes/boton-lookbook.jpg" alt="Lookbook"/>
-			<img src="imagenes/botonera-imagenes/boton-accesorios.jpg" alt="Accesorios"/>
-			<img src="imagenes/botonera-imagenes/boton-sport.jpg" alt="Sport"/>
-			<img src="imagenes/botonera-imagenes/boton-abrigos.jpg" alt="Abrigos"/>
-			<img src="imagenes/botonera-imagenes/boton-standart-series.jpg" alt="Standart"/>
+		<section class="fix">
+			<div class="coming-soon">COMING SOON</div>
+			<div class="working">WE ARE WORKING TO FIX</div>
 		</section>
-		<div class="video"><iframe title="vimeo-player" src="https://player.vimeo.com/video/714205564?h=960032b4c0" width="640" height="360" frameborder="0" allowfullscreen></iframe></div>
-		<div class="hashtag"><a href="index.html" class="complotrock">#COMPLOTROCK</a></div>
-		<div class="botonera-redes">
-			 <a href="https://www.facebook.com/complot.com.ar" target="_blank"><img src="imagenes/botonera-redes/boton-fb.jpg" width="250" height="250" alt="facebook"/></a>
-			<a href="https://www.instagram.com/complotrock" target="_blank"><img src="imagenes/botonera-redes/boton-ig.jpg" width="250" height="250" alt="instagram"/></a>
-			<a href="https://www.tiktok.com/@complotrock" target="_blank"><img src="imagenes/botonera-redes/boton-tiktok.jpg" width="250" height="250" alt="tiktok"/></a>
-			<a href="https://vimeo.com/740017550" target="_blank"><img src="imagenes/botonera-redes/boton-youtube.jpg" width="250" height="250" alt="vimeo"/></a>
-		</div>
 	</main>
 	<footer>
 		<section class="newsletter">
@@ -120,23 +97,5 @@
           <a href="formulario.html"><img class="boton-arrepentimiento" src="imagenes/formulario-arrepentimiento.png" width="180" height="70" alt="formulario-de-arrepentimiento"/></a></section>
 		</div>
 	</footer>
-	
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
-<script type="text/javascript">
-$(document).ready(function() {
-			$("[data-fancybox]").fancybox({
-				buttons: [
-					"zoom",
-					"slideShow",
-					"fullScreen",
-					"thumbs",
-					"close"
-				],
-				infobar: false,
-				loop: true,
-			});
-		});
-    </script>
 </body>
 </html>
